<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="325dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_login_textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usr_hint"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login_textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw_hint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToRegister_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/goToRegister" />
    </LinearLayout>


</RelativeLayout>